try fixing browser vh jumping

--- a/src/index.global.css
+++ b/src/index.global.css
@@ -89,3 +89,14 @@ hr {
   opacity: 0.2;
   margin: 2rem 0;
 }
+
+/* fix vh page jump on mobile */
+body::after {
+    content: '';
+    position: fixed;
+    top: -100px;
+    bottom: -100px;
+    left: 0;
+    right: 0;
+    z-index: -1;
+}
